# data-strucures

./: CMakeLists.txt
CircList/0- TDA/: CircList.h  main.c
Exams/n1/question1/: Deque.c  Deque.h
Exams/n1/question3/: CaçaPalavras.c  CaçaPalavras.h  main.c
Exams/n1/queston4/: Stack.c  Stack.h
LinkedList/0- TDA/: LinkedList.c  LinkedList.h  a.out  main.c
LinkedList/1- InteirosBacanas/: a.out  main.c  mylib.h
LinkedList/2- OndeEstáOLoop/: main.c  mylib.h
List/DoublyLinkedList/Linear/: a.out  main.c  mylib.c  mylib.h
List/SinglyLinkedList/Circular/0-TDA/: CircList.c  a.out
List/SinglyLinkedList/Circular/1-EDmundo/: mylib.h
List/SinglyLinkedList/Circular/2-MergeNoRepeat/: TCircList.c  TCircList.h
List/SinglyLinkedList/Linear/0-TDA/: a.out
List/SinglyLinkedList/Linear/1-InteirosBacanas/: README.md  mylib.c
List/SinglyLinkedList/Linear/2-MergeNoRepeat/: TLinkedList.c  TLinkedList.h
List/SinglyLinkedList/Linear/3-OndeEstáOLoop/: mylib.c
List/StaticList/: main.c
Queue/: DynamicQueue.c  main.c
Queue/Dynamic/: DynamicQueue.c  DynamicQueue.h  a.out  main.c
Queue/Exercise/: Makefile  a  ex1.c  ex1.h  ex1.md  main.c  test.sh
Queue/Exercise/testes/: 1.in  1.in-out  2.in  2.in-out  3.in
Queue/Exercises/: ex1.c  ex1.h
Queue/Static/: StaticQueue.c  StaticQueue.h  a.out  main.c
Stack/: DynamicStack.c  DynamicStack.h  StaticStack.c  StaticStack.h
Stack/Dynamic/: DynamicStack.c  DynamicStack.h  a.out  main.c
Stack/Exercises/: ex1.c  ex2.c
Stack/Static/: StaticStack.c  StaticStack.h  a.out  main.c
